@@ -29,6 +29,8 @@
 			<label index="tx_community_acl_role.name">Name</label>
 			<label index="tx_community_acl_rule">ACL Rule</label>
 			<label index="tx_community_acl_rule.name">Name</label>
+			<label index="tx_community_acl_rule.resource">Resource</label>
+			<label index="tx_community_acl_rule.feuser">FE User</label>
 			<label index="tx_community_acl_rule.role">Role</label>
 			<label index="tx_community_acl_rule.access_mode">Access Mode</label>
 			<label index="tx_community_acl_rule.access_mode.I.0">deny</label>
